# mcp-helper

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  README.md  build.sh  chatlog_001.md  chatlog_002.md  chatlog_003.md  docker-build.sh  docker-compose.yml  e2e_test.go  envoy.yaml  go.mod  go.sum  main.go  run_e2e_tests.sh  start.sh
.cursor/rules/: deployment-docker.mdc  envoy-dynamic-module.mdc  envoy-external-processor.mdc  go-coding-standards.mdc  mcp-gateway-architecture.mdc  mcp-helper-architecture.mdc  mcp-protocol.mdc
envoy-filter/: .gitignore  Cargo.toml  Dockerfile
envoy-filter/src/: lib.rs  mcp_logging.rs
ext-proc/: Dockerfile  go.mod  go.sum  request.go  response.go  server.go
ext-proc/cmd/bbr/: health.go  main.go
ext-proc/handlers/: request.go  response.go
ext-proc/internal/tls/: tls.go
ext-proc/pkg/bbr/handlers/: request.go
ext-proc/server/: runserver.go
pkg/bbr/handlers/: headers.go  request.go  response.go  server.go
pkg/bbr/server/: runserver.go
server1/: Dockerfile  go.mod  main.go
server2/: Dockerfile  go.mod  main.go
