[package]
name = "mcp-envoy-filter"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_envoy_filter"
crate-type = ["cdylib"]

[dependencies]
# The SDK version must match the Envoy version due to the strict compatibility requirements.
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy", rev = "73fe00fc139fd5053f4c4a5d66569cc254449896" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1 